--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
 
-    <h2>I am new Programmer</h2>
+    <div id="heading-parent">
+
+        <h2>I am new Programmer</h2>
+    </div>
+
     
 </body>
 </html>
