--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <div id="heading-parent">
 
         <h2>I am new Programmer</h2>
+          
+        <div class="btn-parent">
+            <button class="btn">Hire me now</button>
+        </div>
+   
     </div>
 
     
