--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div id="heading-parent">
 
-        <h2>I am new Programmer</h2>
+        <h2>I am a new Programmer</h2>
           
         <div class="btn-parent">
             <button class="btn">Hire me now</button>
